--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,40 +10,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Set up JDK 20
+        uses: actions/setup-java@v3
         with:
           java-version: '20'
           distribution: 'temurin'
-      - name: Build with Gradle
+      - name: Test with Gradle
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.3
-      #- run: ./gradlew checkstyleMain
-      #- run: ./gradlew test
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v2
-
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          cache-from: hexletcomponents/java-javalin-example:latest
-          cache-to: type=inline
-          tags: hexletcomponents/java-javalin-example:latest
-
-      - uses: paambaati/codeclimate-action@v3.0.0
+          arguments: build
+          build-root-directory: app
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.1
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
           JACOCO_SOURCE_PATH: app/src/main/java
